Fix Vercel config for Flutter Web deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "web/index.html",
+      "src": "build/web/**",
       "use": "@vercel/static"
     }
   ],
