--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-  "version": 2,
-  "public": true,
-  "builds": [
-    { "src": "web/**/*", "use": "@vercel/static" }
+  "rewrites": [
+    { "source": "/install.html", "destination": "/static/install.html" },
+    { "source": "/setup.html", "destination": "/static/setup.html" }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/web/$1" }
+  "builds": [
+    { "src": "build/web/**", "use": "@vercel/static" }
   ]
 }
